--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.1.1",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.1",
-    "leaflet": "^1.9.4"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.1.12",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
